Closes #2 add custom links

--- a/popup.html
+++ b/popup.html
@@ -28,6 +28,9 @@
         <input type="text" id="portfolio" placeholder="Portfolio Link">
         <img src="utils/copy-icon.png" id="copyPortfolio" class="copy-icon" alt="Copy">
     </div>
+    <div id="custom-links"></div>
+    
+    <button id="addLink">+</button>
     <button id="save">Save Links</button>
     <div id="snackbar"></div>
     <script src="popup.js"></script>
