--- a/popup.html
+++ b/popup.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Apply Links</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap');
+    </style>
 </head>
 
 <body>
+    <a href="https://github.com/khanhdo05/quack" target="_blank" class="bug-report" title="go to github">
+        <img src="utils/bug-icon.png" alt="Report Bug" class="bug-icon">
+    </a>
     <h1 class="title">Quack</h1>
     <div class="input-container">
         <img src="utils/linkedin.png" id="linkedInIcon" class="icon" alt="LinkedIn">
@@ -29,10 +37,10 @@
         <img src="utils/copy-icon.png" id="copyPortfolio" class="copy-icon" alt="Copy">
     </div>
     <div id="custom-links"></div>
-    
-    <button id="addLink">+</button>
-    <button id="save">Save Links</button>
-    <div id="snackbar"></div>
+
+    <button id="addLink" class="button-35" title="add custom link">+</button>
+    <button id="save" class="button-35" title="save links">Saves</button>
+    <div id="snackbar" class="snackbar"></div>
     <script src="popup.js"></script>
 </body>
 
