--- a/popup.html
+++ b/popup.html
@@ -15,26 +15,26 @@
 
 <body>
     <a href="https://github.com/khanhdo05/quack" target="_blank" class="bug-report" title="go to github">
-        <img src="bug-icon.png" alt="Report Bug" class="bug-icon">
+        <img src="utils/bug-icon.png" alt="Report Bug" class="bug-icon">
     </a>
     <h1 class="title">Quack</h1>
     <div class="input-container">
-        <img src="linkedin.png" id="linkedInIcon" class="icon" alt="LinkedIn">
+        <img src="utils/linkedin.png" id="linkedInIcon" class="icon" alt="LinkedIn">
         <label for="linkedin" class="label">LinkedIn</label>
         <input type="text" id="linkedin" placeholder="LinkedIn Profile Link">
-        <img src="copy-icon.png" id="copyLinkedin" class="copy-icon" alt="Copy">
+        <img src="utils/copy-icon.png" id="copyLinkedin" class="copy-icon" alt="Copy">
     </div>
     <div class="input-container">
-        <img src="github.png" id="githubIcon" class="icon" alt="GitHub">
+        <img src="utils/github.png" id="githubIcon" class="icon" alt="GitHub">
         <label for="github" class="label">GitHub</label>
         <input type="text" id="github" placeholder="GitHub Profile Link">
-        <img src="copy-icon.png" id="copyGithub" class="copy-icon" alt="Copy">
+        <img src="utils/copy-icon.png" id="copyGithub" class="copy-icon" alt="Copy">
     </div>
     <div class="input-container">
-        <img src="duck.png" id="portfolioIcon" class="icon" alt="Portfolio">
+        <img src="utils/duck.png" id="portfolioIcon" class="icon" alt="Portfolio">
         <label for="portfolio" class="label">Portfolio</label>
         <input type="text" id="portfolio" placeholder="Portfolio Link">
-        <img src="copy-icon.png" id="copyPortfolio" class="copy-icon" alt="Copy">
+        <img src="utils/copy-icon.png" id="copyPortfolio" class="copy-icon" alt="Copy">
     </div>
     <div id="custom-links"></div>
 
