resolve some bugs and fix some styling

--- a/popup.html
+++ b/popup.html
@@ -38,8 +38,8 @@
     </div>
     <div id="custom-links"></div>
     <div class="button-container">
-        <button id="addLink" class="button-35" title="add custom link">+</button>
-        <button id="save" class="button-35" title="save links">Save</button>
+        <button id="addLink" class="button-35 plus-button" title="add custom link">+</button>
+        <button id="save" class="button-35 save-button" title="save links">Save</button>
         <button id="autoSave" class="button-35 auto-save-enabled" title="toggle auto-save">Auto-save</button>
     </div>
     <div id="snackbar" class="snackbar"></div>
