press enter in inputs also trigger save

--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quick Apply Links</title>
+    <title>Quack</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
@@ -39,7 +39,7 @@
     <div id="custom-links"></div>
     <div class="button-container">
         <button id="addLink" class="button-35 plus-button" title="add custom link">+</button>
-        <button id="save" class="button-35 save-button" title="save links">Save</button>
+        <button id="save" class="button-35 save-button" title="click this button or press Enter in inputs to save links">Save</button>
         <button id="autoSave" class="button-35 auto-save-enabled" title="toggle auto-save">Auto-save</button>
     </div>
     <div id="snackbar" class="snackbar"></div>
